especificar jwt e apikey
