# application/app/Http/Controllers/Api/ApiController.php
@@ -15,6 +15,27 @@ use OpenApi\Annotations as OA;
  */
 class ApiController extends Controller
 {
+
+    /**
+     * @OA\Get(
+     *     path="/",
+     *     summary="Endpoint de Boas-vindas",
+     *     description="Retorna uma mensagem de boas-vindas para verificar se a API está funcionando corretamente.",
+     *     tags={"Miscellaneous"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Mensagem de boas-vindas retornada com sucesso",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="message",
+     *                 type="string",
+     *                 example="Fullstack Challenge 🏅 - Dictionary"
+     *             )
+     *         )
+     *     )
+     * )
+     */
     public function hello()
     {
         return response()->json([
@@ -22,6 +43,26 @@ class ApiController extends Controller
         ], 200);
     }
 
+    /**
+     * @OA\Get(
+     *     path="/pleasesignin",
+     *     summary="Mensagem de solicitação de login.",
+     *     description="Retorna uma mensagem indicando que o usuário precisa realizar o login antes de continuar.",
+     *     tags={"Auth"},
+     *     @OA\Response(
+     *         response=400,
+     *         description="Usuário não autenticado, solicita login",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="message",
+     *                 type="string",
+     *                 example="Please, sign in first!"
+     *             )
+     *         )
+     *     )
+     * )
+     */
     public function pleasesignin()
     {
         return response()->json([
